<resources>
    <string name="app_name">ShopApp</string>
    <string name="signUp">Регистрация</string>
    <string name="loginEnter">Введите логин</string>
    <string name="emailEnter">Введите электронную почту</string>
    <string name="passwordEnter">Введите пароль</string>
    <string name="signIn">Войти в аккаунт</string>
    <string name="catalogue">Catalogue</string>
    <string name="history">History</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>

    <string name="product_image">Изображение товара</string>
    <string name="currency_rub">₽</string>
    <string name="addToCart">В корзину</string>
    <string name="showMore">Показать больше</string>
    <string name="removeFromCart">Удалить из корзины</string>
</resources>