<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/signUp"
            android:layout_gravity="center"
            android:layout_marginTop="170dp"
            android:textSize="25sp" />

        <EditText
            android:autofillHints="name"
            android:id="@+id/userLogin"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/loginEnter"
            android:layout_gravity="center"/>

        <EditText
            android:autofillHints="emailAddress"
            android:id="@+id/userEmail"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/emailEnter"
            android:layout_gravity="center"/>

        <EditText
            android:autofillHints="password"
            android:id="@+id/userPassword"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/passwordEnter"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/signUp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMovieList"
            android:layout_width="0dp"
            android:layout_height="0dp" />
    </LinearLayout>

</FrameLayout>